--- a/manifest.json
+++ b/manifest.json
@@ -1,58 +1,28 @@
 {
   "manifest_version": 3,
-  "version": "1",
   "name": "HelpmeOut",
-  "description": "It records the user's screen",
-  "icons": {
-    "128": "./images/6.png"
-  },
-
-  "background": {
-    "service_worker": "background.js"
-  },
-
+  "version": "1.0",
+  "description": "Show Them Don't Just Tell",
+  "permissions": [
+    "activeTab",
+    "tabs",
+    "desktopCapture",
+    "storage",
+    "identity",
+    "webNavigation",
+    "offscreen"
+  ],
   "action": {
-    "default_popup": "index.html",
+    "default_popup": "/popup.html",
     "default_icon": {
-      "16": "./images/2.png",
-      "32": "/images/5.png",
-      "128": "/images/6.png"
+      "16": "/images/2.png",
+      "48": "/images/2.png",
+      "128": "/images/2.png"
     }
   },
- "host_permissions": [
-        "http://*/",
-        "https://*/"
-    ],
-    "permissions": [
-        "tabCapture",
-        "offscreen",
-        "scripting",
-        "tabs",
-        "activeTab",
-        "desktopCapture",
-        "storage",
-        "downloads",
-        "contentSettings"
-
-    ],
-    "web_accessible_resources": [
-        {
-            "matches": [
-                "<all_urls>"
-            ],
-            "resources": [
-                "index.html",
-                "iframe.html",
-                "./js/popup.js",
-                "./images/pause.png",
-                "./images/record.png",
-                "./images/stop.png",
-                "./images/trash.png",
-                "./images/video-camera.png",
-                "./images/Audio.png",
-                "./images/play.png"
-
-            ]
-        }
-    ]
+  "icons": {
+    "16": "/images/2.png",
+    "48": "/images/2.png",
+    "128": "/images/2.png"
+  }
 }
